--- a/pages/home/member.wxml
+++ b/pages/home/member.wxml
@@ -1,76 +1,40 @@
 <!--pages/product/index.wxml-->
-<!-- <view class="header">
-  <view class="search-bar">
-    <icon class="iconfont icon-search"></icon>
-    <input type="text" class="search-input" placeholder="输入关键词" placeholder-class="search-input-placeholder" bindblur="search" value="{{keyword}}"/>
-  </view>
-</view> -->
-
-<!-- 筛选栏 -->
-<!-- <view class="filters">
-  <view class="filter {{order == 'star'? 'selected' : ''}}" catchtap="tapFilter" data-order="star">综合</view>
-  <view class="filter {{order == 'sale_count'? 'selected' : ''}}" catchtap="tapFilter" data-order="sale_count">销量</view>
-  <view class="filter {{order == 'add_time'? 'selected' : ''}}" catchtap="tapFilter" data-order="add_time">新品</view>
-  <view class="filter {{order == 'price'? 'selected' : ''}}" catchtap="tapFilter" data-order="price">
-    <text>价格</text>
-    <view class="filter-sort">
-      <text class="filter-sort-up {{sort == 'ASC' ? 'selected' : ''}}"></text>
-      <text class="filter-sort-down {{sort == 'DESC' ? 'selected' : ''}}"></text>
-    </view>
-  </view>
-  <view class="filter" catchtap="switchDisplay">
-    <icon class="iconfont icon-category-{{display}}"></icon>
-  </view>
-</view> -->
 <view class="recharge-tips">
     <i class="iconfont icon-medal"></i>
     <text>购买以下产品，成为相应等级的会员</text>
 </view>
 
 <!-- 产品列表 -->
-<view class="product-{{display}}">
+<view class="jk-product-list product-{{display}}">
   <block wx:for="{{products}}" wx:key="id" wx:for-item="product">
-    <template is="{{display == 'grid' ? 'productGrid' : 'productList'}}" data="{{product}}"/>
+    <template is="productList" data="{{product}}"/>
   </block>
 </view>
 
 <wxs module="filters" src="../../assets/utils.wxs"></wxs>
 
-<template name="productGrid">
-  <navigator class="product-grid-item" url="/pages/product/detail?id={{product.id}}">
-    <image class="product-image" src="{{product.img}}" mode="widthFix"/>
-    <text class="product-name">{{product.name}}</text>
-    <view class="product-tags">
-      <text class="jk-vip-tag jk-vip-tag-{{product.target_level.senior}} iconfont icon-vip" wx:if="{{product.target_level}}">{{product.target_level.name}}</text>
-    </view>
-    <view class="product-meta">
-      <view class="product-price font-red font-s">
-        <text>￥</text>
-        <text>{{filters.toFix(product.price, 2)}}</text>
-      </view>
-
-      <button class="product-add-to-cart iconfont icon-rmb" data-id="{{product.id}}" catchtap="addToCart"></button>
-    </view>
-  </navigator>
-</template>
-
 <template name="productList">
-  <navigator class="product-list-item" url="/pages/product/level?id={{product.id}}">
-    <image class="product-image" src="{{product.img}}" mode="widthFix"/>
-    <view class="product-info">
-      <text class="product-name">{{product.name}}</text>
-      <view class="product-tags">
-      <text class="jk-vip-tag jk-vip-tag-{{product.target_level.senior}} iconfont icon-vip" wx:if="{{product.target_level}}">{{product.target_level.name}}</text>
-    </view>
-      <view class="product-meta">
-        <view class="product-price font-red font-s">
-          <text>￥</text>
-          <text>{{filters.toFix(product.price, 2)}}</text>
+  <navigator url="/pages/product/detail?id={{product.id}}" class="jk-product-item">
+    <image src="{{product.img}}" mode="widthFix" class="jk-product-img"/>
+    <view class="jk-product-meta">
+        <view class="jk-product-name">{{product.name}}</view>
+        <view class="jk-product-desc">{{product.desc}}</view>
+        <view class="jk-product-price">
+            <text class="price-mark">￥</text>
+            <text class="price"> {{filters.toFix(product.price, 2)}}</text>
         </view>
-
-        <!-- <button class="product-add-to-cart iconfont icon-cart" data-id="{{product.id}}" catchtap="addToCart"></button> -->
-        <button catchtap="buy" class="btn11 iconfont icon-rmb" data-id="{{ product.id }}"> 下单</button>
-      </view>
+        <view class="jk-product-option">
+            <view class="jk-vip-tag jk-vip-tag-{{product.target_level.senior}}" wx:if="{{product.target_level}}">
+              <text class="iconfont icon-vip"></text>
+              <text>{{product.target_level.name}}</text>
+            </view>
+        </view>
+        <view class="jk-product-toolbar">
+            <button type="button" catchtap="buy" class="jk-button buy-now" data-id="{{ product.id }}">
+                <i class="iconfont icon-fanli"></i>
+                下单
+            </button>
+        </view>
     </view>
   </navigator>
 </template>
