--- a/pages/home/index.wxss
+++ b/pages/home/index.wxss
@@ -1,33 +1,4 @@
 /* pages/home/index.wxss */
-/* 用户信息 */
-.user-info {
-  padding: 80rpx 0 40rpx;
-  text-align: center;
-  background-color: #ffffff;
-}
-
-.user-info .avatar {
-  width: 200rpx;
-  height: 200rpx;
-  border: 4rpx solid #ffffff;
-  box-shadow: 0 0 14rpx #858585;
-  border-radius: 50%;
-}
-
-.user-info .nickname {
-  display: block;
-  margin: 20rpx auto;
-}
-
-.user-info .login-btn {
-  background-color: #E9577C;
-  color: #ffffff;
-  padding: 0rpx 40rpx;
-  width: 300rpx;
-  font-size: 28rpx;
-  margin: 20rpx auto 0;
-  border-radius: 15rpx;
-}
 
 /* 大功能 */
 .block {
@@ -39,7 +10,7 @@
 }
 
 .block .block-title {
-  color: #333333;
+  color: #0b0b0b;
 }
 
 .block .block-cubes {
@@ -67,127 +38,93 @@
   border: 0;
   background-color: #ffffff;
   color: #565656;
-  border-bottom: 2rpx solid #ddd;
-}
-
-/* 成为会员 */
-.hdj-join-member-placeholder {
-  display: block;
-  width: 750rpx;
-  height: 108rpx;
-}
-
-.hdj-join-member {
-  display: flex;
-  position: fixed;
-  bottom: 0;
-  width: 750rpx;
-  background: #fff;
-  border-top: 2rpx solid #ddd;
-  align-items: center;
-}
-.hdj-join-member .hdj-join-member-privilege {
-  flex-grow: 1;
-  font-size: 32rpx;
-  padding-left: 20rpx;
-}
-.hdj-join-member .hdj-join-member-btn {
-  background-color: #333333;
-  color: #FFEEE2;
-  padding: 20rpx;
-  font-size: 32rpx;
-}
-.hdj-join-member .hdj-join-member-btn .price {
-  font-weight: bold;
-  font-size: 36rpx;
-  color: #FFEEE2;
 }
 
 /* 会员信息 */
 .hdj-member-info {
-  background-color: #333333;
   position: relative;
-  /* margin-bottom: 60px; */
-  width: 750rpx;
-  height: 360rpx;
-  overflow: visible;
-  margin-bottom: 100rpx;
-}
-.hdj-member-info .hdj-member-card-top {
-  background-color: #423233;
-  border-radius: 20rpx 20rpx 0 0;
-  width: 720rpx;
-  margin: 0 auto;
-  position: relative;
-  top: 156rpx;
-  overflow: visible;
-}
-.hdj-member-info .hdj-member-card-bottom {
-  padding-top: 30rpx;
-  background: #322d2a;
-  box-shadow: 0px -6rpx 12rpx rgba(44, 35, 29, 0.4);
-  border-radius: 0px 0px 10px 10px;
-  width: 720rpx;
-  margin: 20rpx auto 0;
-  height: 100rpx;
-  top: 50rpx;
-  position: relative;
-  color: #FFEAB2;
-  text-align: center;
-  font-size: .8rem;
-  line-height: 1.6;
-  overflow: visible;
 }
 .hdj-member-info .hdj-member-card {
-  background: linear-gradient(309deg, #fcc295 0%, #ffe1b3 100%);
-  top: -80rpx;
-  position: relative;
-  border-radius: 10px 10px 0px 0px;
-  width: 560rpx;
-  margin: 0 auto;
-  padding: 40rpx 5%;
-}
-.hdj-member-info .hdj-member-card:after {
-  content: '';
-  display: block;
-  width: 100%;
-  height: 100%;
-  background-image: url('http://m.hdjshop.cn/themes/hdj/images/crown.png');
-  background-repeat: no-repeat;
-  background-position: right bottom;
-  position: absolute;
-  top: 0;
-  left: 0;
-  background-size: 50%;
-}
-.hdj-member-info .hdj-member-card .hdj-member-card-info {
-  flex-grow: 1;
+  background: url(http://m.hdjshop.cn/themes/hdj/images/member-bg.png) no-repeat center transparent;
+  background-size: 100% 100%;
+  width: 85%;
+  margin: 24rpx auto;
+  padding: 40rpx 0 40rpx 5%;
   display: flex;
 }
-.hdj-member-info .hdj-member-card .hdj-member-card-info .hdj-member-card-avatar {
-  width: 60px;
-  height: 60px;
+.hdj-member-info .hdj-member-card .hdj-member-card-avatar {
+  width: 140rpx;
+  height: 140rpx;
   border-radius: 50%;
-  border: 1px solid #583c30;
-  box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
-  margin-right: 5px;
+  box-shadow: 0 0 6rpx rgba(0, 0, 0, 0.3);
+  margin-right: 30rpx;
 }
-.hdj-member-info .hdj-member-card .hdj-member-card-info .hdj-member-name-meta {
-  font-size: 1rem;
-  line-height: 1.8rem;
+.hdj-member-info .hdj-member-card .hdj-member-name-meta {
+  font-size: 32rpx;
+  line-height: 1;
+  color: #faddc0;
+  flex-grow: 1;
 }
-.hdj-member-info .hdj-member-card .hdj-member-card-info .hdj-member-name-meta .hdj-member-level-name {
-  font-size: .8rem;
+.hdj-member-info .hdj-member-card .hdj-member-name-meta .hdj-member-desc {
+  margin-top: 16rpx;
+  position: relative;
+  overflow: visible;
 }
-.hdj-member-info .hdj-member-card .hdj-member-card-notice {
-  width: 100%;
-  border: 1px solid rgba(112, 112, 112, 0.1);
-  margin-top: 40rpx;
+.hdj-member-info .hdj-member-card .hdj-member-name-meta .hdj-member-desc .hdj-member-level-name {
+  font-size: 24rpx;
 }
-.hdj-member-info .hdj-member-card .hdj-member-vip-mark {
+.hdj-member-info .hdj-member-card .hdj-member-name-meta .hdj-member-desc .hdj-member-level-name icon {
+  font-size: 24rpx;
+}
+.hdj-member-info .hdj-member-card .hdj-member-name-meta .hdj-member-desc .hdj-member-level-expired {
+  margin-top: 26rpx;
+  font-size: 22rpx;
+  padding: 6rpx 10rpx;
+  border-radius: 14rpx;
+  border: 2rpx solid #faddc0;
+  display: inline-block;
+}
+.hdj-member-info .hdj-member-card .hdj-member-name-meta .hdj-member-desc .hdj-member-level-link {
   position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
   right: 5%;
-  top: 50rpx;
-  width: 120rpx;
-  height: 120rpx;
+  font-size: 20rpx;
+  color: #faddc0;
+}
+.hdj-member-info .hdj-member-card .hdj-member-name-meta .hdj-member-desc .hdj-member-level-link .hdj-member-level-privileges {
+  display: flex;
+  margin-bottom: 20rpx;
+}
+.hdj-member-info .hdj-member-card .hdj-member-name-meta .hdj-member-desc .hdj-member-level-link .hdj-member-level-privileges image {
+  width: 36rpx;
+  height: 36rpx;
+  margin-right: 4rpx;
+}
+.hdj-member-info .hdj-member-card .hdj-member-name-meta .hdj-member-desc .hdj-co-partner-link {
+  display: flex;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: #faddc0;
+  border-radius: 50rpx;
+  border-bottom-right-radius: 0;
+  border-top-right-radius: 0;
+  padding: 20rpx;
+  right: 0;
+  font-size: 24rpx;
+  color: #0b0b0b;
+  align-items: center;
+}
+.hdj-member-info .hdj-member-card .hdj-member-name-meta .hdj-member-desc .hdj-co-partner-link image {
+  width: 48rpx;
+  height: 48rpx;
+  padding: 6rpx;
+  border-radius: 50%;
+  background-color: #d19a63;
+  margin-right: 20rpx;
+}
+.hdj-member-info .hdj-member-card .hdj-member-name-meta .hdj-member-desc .hdj-co-partner-link view:last-child {
+  font-size: 20rpx;
+  margin-top: 8rpx;
 }
